# mass-spring-damper

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  results.csv
include/: export_data.hpp  plant.hpp  render.hpp
scripts/: plot_results.py  sweep.py
src/: export_data.cpp  main.cpp  plant.cpp  render.cpp
